#
#    Copyright (c) 2019-2020 Google LLC. All Rights Reserved.
#    Copyright (c) 2016-2018 Nest Labs Inc. All Rights Reserved.
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.

#
#    Description:
#      This file is the GNU automake template for Weave Data Language
#      (WDL) Compiler (WDLC) test traits used for schema development
#      testing and code generation regression testing.
#

include $(abs_top_nlbuild_autotools_dir)/automake/pre.am

EXTRA_DIST                                                    = \
    schema/nest/test/iface/test_basic_iface.proto               \
    schema/nest/test/iface/test_nested_iface.proto              \
    schema/nest/test/iface/test_simple_iface.proto              \
    schema/nest/test/iface/test_versioned_basic_iface.proto     \
    schema/nest/test/iface/test_z_iface.proto                   \
    schema/nest/test/resource/test_z_resource.proto             \
    schema/nest/test/resource/trait_test_resource.proto         \
    schema/nest/test/trait/test_a_trait.proto                   \
    schema/nest/test/trait/test_b_trait.proto                   \
    schema/nest/test/trait/test_c_trait.proto                   \
    schema/nest/test/trait/test_common.proto                    \
    schema/nest/test/trait/test_common_versioned.proto          \
    schema/nest/test/trait/test_d_trait.proto                   \
    schema/nest/test/trait/test_e_trait.proto                   \
    schema/nest/test/trait/test_f_trait.proto                   \
    schema/nest/test/trait/test_h_trait.proto                   \
    schema/nest/test/trait/test_mismatched_c_trait.proto        \
    schema/nest/test/trait/test_z_trait.proto                   \
    schema/nest/test/trait/test_z_typespace.proto               \
    $(NULL)

include $(abs_top_nlbuild_autotools_dir)/automake/post.am
